@@ -1,3 +1,3 @@
-SUBDIRS = png_file pdf-surface ps-surface svg-surface
+SUBDIRS = png_file pdf-surface ps-surface svg-surface text-rotate
 
 EXTRA_DIST = README Makefile.am_fragment
