@@ -1,0 +1,6 @@
+.deps
+.libs
+Makefile
+Makefile.in
+text_rotate
+text-rotate.png
