@@ -1,0 +1,7 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+# build the executable but don't install it
+noinst_PROGRAMS = text_rotate
+text_rotate_SOURCES = text-rotate.cc
+
+CLEANFILES = text-rotate.png
